[workspace]
members = [
    ".",
    "./libpghom"
]
exclude = [
    "./pg-extension/pghom"
]

[package]
name = "pghom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.0"
kzen-paillier = "0.4.3"
serde = "1.0.152"
