[package]
name = "pghom"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgx/pg11", "pgx-tests/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg15 = ["pgx/pg15", "pgx-tests/pg15"]
pg_test = []

[dependencies]
ciborium = "0.2.0"
kzen-paillier = "0.4.3"
pgx = "=0.7.1"
serde = "1.0.152"

[dev-dependencies]
pghom_client = { package = "pghom", path = "../.." }
pgx-tests = "=0.7.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
